--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Deploy to EC2
       run: |
-        ssh -i "CrmBackend.pem" ubuntu@ec2-16-16-246-83.eu-north-1.compute.amazonaws.com
-          cd Pizeonfly_crm/
+        ssh -i CrmBackend.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          cd /path/to/your/project
           git pull origin main
           pm2 restart all
         EOF
