--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI/CD
 
 on:
@@ -24,9 +21,20 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+
+    # Install dependencies
     - run: npm ci
+
+    # Install pm2 globally
+    - run: npm install -g pm2
+
+    # Build the project (if necessary)
     - run: npm run build --if-present
+
+    # Restart pm2 processes
     - run: pm2 restart all
+
+    # Set environment variables
     - run: |
         touch .env
         echo "${{secrets.CRM_ENV_FILE}}" > .env
