--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,16 +9,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 20.x
         cache: 'npm'
 
     # Install dependencies
@@ -27,16 +23,13 @@ jobs:
     # Install pm2 globally
     - run: npm install -g pm2
 
-    # Build the project (if necessary)
-    - run: npm run build --if-present
-
     # SSH into the EC2 instance and deploy
     - name: SSH and deploy
       uses: appleboy/ssh-action@v0.1.7
       with:
         host: ec2-16-16-246-83.eu-north-1.compute.amazonaws.com
         username: ubuntu
-        key: ${{ secrets.SSH_PRIVATE_KEY }}  # Add your SSH private key to GitHub Secrets
+        key: ${{ secrets.SSH_PRIVATE_KEY }}  # Ensure the private key is added to GitHub Secrets
         script: |
           cd ~/Pizeonfly_crm
           git pull origin master
