--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
+    "qrcode": "^1.5.4",
+    "shortid": "^2.2.16",
     "socket.io": "^4.8.0",
     "validator": "^13.11.0"
   }
