--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "qrcode": "^1.5.4",
     "shortid": "^2.2.16",
     "socket.io": "^4.8.0",
+    "twilio": "^5.4.0",
     "validator": "^13.11.0"
   }
 }
